Delete extra files

--- a/Control_Panel/Control.html
+++ b/Control_Panel/Control.html
@@ -23,7 +23,7 @@
 
 <br><br>
 
- <p> Engine 4 </p>  <input type="range" min="0" max="100" value="0" class="engine" id="eng4" name="eng4">   <span id="val4"></span>
+ <p> Engine 4 </p>  <input type="range" min="0" max="100" value="0" class="engine" id="eng4" name="eng4"> <span id="val4"></span>
 
 <br><br>
 
@@ -103,6 +103,6 @@ engine6.oninput = function() {
 
 </script>
 </center>
-<a href="control_movement.html" class="next ">&#8250;</a>
+<a href="/ControlMovement/control_movement.html" class="next ">&#8250;</a>
 </body>
 </html>
